finished project with all the functionalities and all requirements. Tests are not added yet.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,11 +36,10 @@ spring:
   #cloud-name:
 server:
   port: 8090
-#  error:
-#    whitelabel:
-#      enabled: false
-#
-#    path: /bad-error
+  error:
+    path: "error"
+    whitelabel:
+      enabled: false
 
 
 
